5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1734_2499.log
== SUBMITION (2019-05-16 17:22:54) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
cont=0
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(i)
-- EXECUTION TIME:
0.22664
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.7182539682539684
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.7182818284589945
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.7180555555555554
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:23:13) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
cont=0
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(i)
-- OUTPUT:
1.7182539682539684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:23:38) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
cont=0
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i)
-- ERROR:
File "XXXX", line 9
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:23:49) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
cont=0
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:24:02) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
cont=0
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.191153
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:24:13) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
cont=0
i=1
while(n>=0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.190962
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
3.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
3.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
3.71805556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:24:22) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
cont=0
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.130689
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:24:30) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.135992
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:24:32) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.161803
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:24:33) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:24:52) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:25:30) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.222975
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.71805556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:25:32) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.150982
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.71805556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:25:32) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:25:35) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.289533
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.71805556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:25:58) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:25:59) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.196199
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:26:05) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:26:26) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:26:30) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:23) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:26) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:37) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:40) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:29:16) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:29:20) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:29:27) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:29:35) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:29:44) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:29:45) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.169596
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:30:13) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>=0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.159464
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:15) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>=0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:30:15) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>=0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.189619
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
numero inicial: 2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:30:16) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>=0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.193562
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:33) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:30:35) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.139794
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.71805556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:39) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:30:40) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.206712
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:46) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:30:47) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.243832
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:30:54) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.140178
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.71805556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:30:57) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.135265
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.71805556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:30:58) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.223269
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.71805556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:58) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:31:00) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:31:01) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.146785
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.71805556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:31:33) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:32:12) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	n=n-1
	i=(1)/(factorial(n))+i
	
print(round(i,8))
-- EXECUTION TIME:
0.139145
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
3.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
3.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
3.71666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:32:12) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	n=n-1
	i=(1)/(factorial(n))+i
	
print(round(i,8))
-- OUTPUT:
3.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:33:06) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:09) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	n=n-1
	i=(1)/(factorial(n))+i
	n=n+2
print(round(i,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:47) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	n=n-1
	i=(1)/(factorial(n))+i
print(round(i,8))
-- OUTPUT:
3.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:14) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	n=n-1
	i=(1)/(factorial(n))+i
print(round(i,8))
-- OUTPUT:
3.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:51) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	n=n-6
	i=(1)/(factorial(n))+i
print(round(i,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    i=(1)/(factorial(n))+i
ValueError: factorial() not defined for negative values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:59) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	n=n-1
	i=(1)/(factorial(n))+i
print(round(i,8))
-- OUTPUT:
3.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:36:02) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	n=n-1
	i=(1)/(factorial(n))+i
print(round(i,8))
-- OUTPUT:
3.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:36:06) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	n=n-1
	i=(1)/(factorial(n))+i
print(round(i,8))
-- OUTPUT:
3.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:36:50) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.345012
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:36:54) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.35578
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.71805556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:37:01) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.479315
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.71825397
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:37:02) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.501183
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.71805556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:37:02) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.246935
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1734/2499/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:37:05) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.265329
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:38:23) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.405704
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 3
    i=
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:38:34) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.311969
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:39:13) 
-- CODE:
from math import *
k=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(k))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.364464
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2499/main.py", line 4, in <module>
    while(n>0):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:39:14) 
-- CODE:
from math import *
k=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(k))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.335437
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2499/main.py", line 4, in <module>
    while(n>0):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:39:18) 
-- CODE:
from math import *
k=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(k))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.337563
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2499/main.py", line 4, in <module>
    while(n>0):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:39:19) 
-- CODE:
from math import *
k=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(k))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.282637
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2499/main.py", line 4, in <module>
    while(n>0):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:39:19) 
-- CODE:
from math import *
k=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(k))+i
	n=n-1
print(round(i,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(n>0):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:39:21) 
-- CODE:
from math import *
k=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(k))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.313662
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2499/main.py", line 4, in <module>
    while(n>0):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:39:29) 
-- CODE:
from math import *
k=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(k))+i
	k=k-1
print(round(i,8))
-- EXECUTION TIME:
0.223187
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2499/main.py", line 4, in <module>
    while(n>0):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:39:31) 
-- CODE:
from math import *
k=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(k))+i
	k=k-1
print(round(i,8))
-- EXECUTION TIME:
0.298656
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2499/main.py", line 4, in <module>
    while(n>0):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:39:32) 
-- CODE:
from math import *
k=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(k))+i
	k=k-1
print(round(i,8))
-- EXECUTION TIME:
0.445068
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2499/main.py", line 4, in <module>
    while(n>0):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:39:33) 
-- CODE:
from math import *
k=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(k))+i
	k=k-1
print(round(i,8))
-- EXECUTION TIME:
0.371086
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2499/main.py", line 4, in <module>
    while(n>0):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:39:41) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.262662
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:39:56) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.290691
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.0
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:39:57) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))
	n=n-1
print(round(i,8))
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:40:26) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.324027
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.0
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:40:27) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.240368
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.0
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:41:01) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	n=n-1
	i=(1)/(factorial(n))+i
	n=n+2
print(round(i,8))
-- EXECUTION TIME:
413.038
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:41:56) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(1)/(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.155552
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:46) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
k=1
while(i<n):
	j=k+(factorial(i))
	n=n+1
	i=i+1
print(round(j,8))
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:58:24) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
k=1
while(i<n):
	s=k+(factorial(i))
	n=n+1
	i=i+1
print(round(s,8))
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:46) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.892227
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
5913
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1401602636313
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
873
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:47) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.24593
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1734/2499/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:47) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.406974
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1401602636313
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1401602636313
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
873
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:51) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.512823
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
5913
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1401602636313
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
873
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:58) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.695475
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
5914
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1401602636314
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
874
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:08) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.441087
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
5914
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
5914
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
5914
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:59:08) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
5914
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:09) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.786005
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
5914
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:

-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
numero inicial: 874
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:09) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.806504
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1401602636314
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
numero inicial: 874
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
numero inicial: 874
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:21) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.224861
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
5913
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1401602636313
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
873
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:24) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.342547
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
5913
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
5913
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1401602636313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:24) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.517949
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
5913
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
873
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:24) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=0
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.516535
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
5913
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
873
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:28) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.221452
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
5914
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1401602636314
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
5914
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:30) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.484565
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
5914
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
5914
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
874
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:59:30) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
5914
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:59:30) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- OUTPUT:
5914
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:30) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.380472
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
5914
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1401602636314
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
numero inicial: 874
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:31) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.626612
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
5914
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1401602636314
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
5914
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:31) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.963033
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
5914
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1401602636314
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
5914
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:31) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
1.33931
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
874
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:

-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:32) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.711561
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1734/2499/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:59:32) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
while(n>0):
	i=(factorial(n))+i
	n=n-1
print(round(i,8))
-- EXECUTION TIME:
0.956452
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
874
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:

-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
874
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:05:01) 
-- CODE:
from math import *
n=int(input("numero inicial: "))
i=1
k=1
while(i<n):
	j=k+(factorial(i))
	n=n+1
	i=i+1
print(round(j,8))
-- EXECUTION TIME:
436.722
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
